--- a/src/pages/mods.astro
+++ b/src/pages/mods.astro
@@ -126,7 +126,7 @@ const mods = [
     title: "Lili's Pottery",
     logo: "/assets/mod-logos/lilis_pottery.png",
     description: "Handcrafted pottery, functional vessels, and decorative blocks for detailed builds.",
-    wiki: "/docs/mods/lilis-pottery/",
+    wiki: "/wiki/lilis-pottery/",
     source: "https://github.com/Let-s-Do-Collection/LilisPottery",
     tags: ["pottery", "decoration", "building", "blocks"],
   },
