--- a/src/layouts/SiteLayout.astro
+++ b/src/layouts/SiteLayout.astro
@@ -11,6 +11,11 @@ const { title = "Let's Do" } = Astro.props;
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>{title}</title>
+
+    <link rel="icon" type="image/png" sizes="64x64" href="/assets/icons/ui/chest_logo.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/ui/chest_logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/ui/chest_logo.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/ui/chest_logo.png">
   </head>
   <body>
     <slot />
