--- a/src/pages/wiki/[slug].astro
+++ b/src/pages/wiki/[slug].astro
@@ -5,7 +5,7 @@ import farmAndCharm from "./config/farm-and-charm.js";
 import herbalbrews from "./config/herbalbrews.js";
 import vinery from "./config/vinery.js";
 import candlelight from "./config/candlelight.js";
-import pottery from "./config/pottery.js";
+import pottery from "./config/lilis-pottery.js";
 
 export function getStaticPaths() {
   return [
@@ -14,7 +14,7 @@ export function getStaticPaths() {
     { params: { slug: "herbalbrews" } },
     { params: { slug: "vinery" } },
     { params: { slug: "candlelight" } },
-    { params: { slug: "pottery" } },
+    { params: { slug: "lilis-pottery" } },
   ];
 }
 
@@ -26,7 +26,7 @@ const configs = {
   herbalbrews,
   vinery,
   candlelight,
-  pottery,
+  "lilis-pottery": pottery,
 };
 
 const config = configs[slug];
