--- a/src/components/wiki/WikiPage.astro
+++ b/src/components/wiki/WikiPage.astro
@@ -6,7 +6,7 @@ import Impressions from "./Impressions.astro";
 import WikiSidebar from "./WikiSidebar.astro";
 import "../../styles/mods.css";
 import "../../styles/wiki.css";
-import "../../styles/wikiSidebar.css";
+import "../../styles/wikisidebar.css";
 import "../../styles/impressions.css";
 
 const withBase = (path) => {
